# VulkanPractice

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sll/vulkanpractice/: CameraContext.kt  CameraSizes.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: tri.frag
gradle/wrapper/: gradle-wrapper.properties
vulkanlib/: .gitignore  build.gradle
vulkanlib/src/main/cpp/: CMakeLists.txt  Utils.h  VulkanContext.cpp  VulkanContext.h  vulkanlib.cpp
vulkanlib/src/main/java/com/sll/vulkanlib/: NativeLib.kt
